--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -1,1 +1,17 @@
 // 何かあれば
+* {
+  font-size: 12px;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
+}
+
+.wrap {
+  margin: 0 auto;
+  width: 100%;
+
+  @include min-mq(md) {
+    width: 940px;
+  }
+}
