--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -15,3 +15,16 @@ body {
     width: 940px;
   }
 }
+
+.fa-spinner {
+  animation: rotation 2s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
