--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
+  letter-spacing: .5em;
 }
 
 .wrap {
