--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -16,6 +16,7 @@ $favorite: #fd9B9f;
 
 
 $shadow: rgba(221, 221, 221, .5);
+$white-shadow: rgba(255, 255, 255, .5);
 
 //////////////////////////
 
