--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -15,3 +15,13 @@
     bottom: 100px;
   }
 }
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg); 
+  }
+}
