--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -14,6 +14,8 @@ $tag: #6AB8C2;
 
 $favorite: #fd9B9f;
 
+$y: #ffc300;
+$v: #8c00ff;
 
 $shadow: rgba(221, 221, 221, .5);
 $white-shadow: rgba(255, 255, 255, .5);
