--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -25,3 +25,17 @@
     transform: rotate(360deg); 
   }
 }
+
+@keyframes rotation_s {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(-180deg);
+  }
+
+  100% {
+    transform: rotate(-360deg); 
+  }
+}
