add about section.

--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -1,14 +1,22 @@
-// 何かあれば
+// 全ページで共通化したいスタイルはここ。
 * {
   font-size: 12px;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
-  letter-spacing: .5em;
+  letter-spacing: .2em;
 }
 
 .wrap {
   margin: 0 auto;
   width: 100%;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+hr {
+  border: 1px solid $silver;
 }
