--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
+  font-size: 12px;
   letter-spacing: .2em;
 }
 
@@ -18,5 +19,6 @@ h2 {
 }
 
 hr {
-  border: 1px solid $silver;
+  border: none;
+  border-top: 1px solid $black;
 }
