--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -7,12 +7,7 @@ $silver: #eee;
 $lightGray: #fafafa;
 $white: #fff;
 
-$btn: #e6797d;
-$btn-shadow: #bc6266;
-
-$tag: #6AB8C2;
-
-$favorite: #fd9B9f;
+$link: #0562D9;
 
 $y: #ffc300;
 $v: #8c00ff;
