--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -57,6 +57,18 @@ ul {
   }
 
   .content {
+
+    &.jsShowScroll {
+      opacity: 0;
+      visibility:hidden;
+      transition: opacity 0.5s , visibility 0.5s;
+
+      &._show {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
     @include min-mq(sm) {
       width: 600px;
     }
