--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -23,6 +23,7 @@ a {
   &:visited,
   &:active {
     color: $link;
+    text-decoration: none;
   }
 }
 
@@ -54,6 +55,23 @@ ul {
   &.bg-gra_one {
     background: linear-gradient(to bottom, rgba(#e8a, 0.5), rgba($y, 0.5));
     height: 100vh;
+
+    &:before,
+    &:after {
+      background: $white;
+      content: '';
+      left: 0;
+      height: 25%;
+      position: absolute;
+      transform: skew(0, -4deg);
+      top: -10%;
+      width: 100%;
+    }
+
+    &:after {
+      bottom: -10%;
+      transform: skew(0, 4deg);
+    }
   }
 
   .content {
